--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "docgen": "docgen --api VehicleUxRestrictionsPluginInterface --output-readme README.md --output-json dist/docs.json",
     "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.js",
     "clean": "rimraf ./dist",
-    "watch": "tsc --watch",
+    "watch": "watch 'npm run build' ./src",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
